# itl-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: dedup.rs
src/: crypto.rs  error.rs  header.rs  lib.rs  parse.rs  types.rs  write.rs
tests/: integration.rs
